# WCRR

./: .gitignore  CMakeLists.txt  LICENSE
shaders/: meshbufferBDA.vert.spv  pbr.frag  pbr.frag.spv  resources.h  transparency.frag  transparency.frag.spv
shaders/src/glsl/: frustumCulling.comp  meshbufferBDA.vert  pbr.frag  resources.h
shaders/src/slang/: pbr.slang  resources.slang  shaders.slang  vertexShader.slang
shaders/src/slang/resources/: geometry.slang  globalconstants.slang  shading.slang
source/: SCGL.cpp  SCGL.h  application.cpp  application.h  commands.cpp  commands.h  common.cpp  common.h  glmdefines.h  main.cpp  rendererresources.h  resources.h
source/device/: debug.cpp  debug.h  device.cpp  device.h
source/pipelines/: descriptors.cpp  descriptors.h  descriptors2.cpp  descriptors2.h  pipelineBuilder.cpp  pipelineBuilder.h
source/resources/: gltfconvertor.cpp  gltfconvertor.h  materialmanager.cpp  materialmanager.h  meshmanager.cpp  meshmanager.h  pakl.cpp  pakl.h  resourcehelpers.cpp  resourcehelpers.h  resourcetypes.h  scenemanager.cpp  scenemanager.h  texturemanager.cpp  texturemanager.h
source/scene/: camera.cpp  camera.h
